--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone: NA/Pacific
 
 title: Technotions # the main title
 
-tagline: A compilation of writings about various topics by Jack Bernard, Urban Technology Student at the University of Michigan. # it will display as the subtitle
+tagline: Writings of all kinds by Jack Bernard # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   A compilation of writings about various topics by Jack Bernard, Urban Technology Student at the University of Michigan.
